src/components/website/advantages/advantages.css
/* The container for the whole thing */
.advantages-container {
    height: auto;
    width: 100%;
    background-color: #141414;

    padding: 105px 120px 62px 120p;

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 24px;
}

/* The container is split into blocks */
.advantage-block {
    height: 410px;
    width: 1200px;

    display: flex;
}

/* Each block (even the full one is split into 2 internal containers */
.advantage-half-block {
    width: 50%;
    height: 100%;

    display: flex;
    justify-content: center;
    align-items: center;
}

.advantage-block-radius {
    border-radius: 50px;
}

/* Style for the <div> to have the 2 <p> inside */
.advantage-text-containter {
    display: flex;
    flex-direction: column;
    align-items: left;
    justify-content: center;
}

.advantage-text p {
    font-size: 64px;
    font-weight: 700;
    line-height: 77px;
    letter-spacing: 0em;
}

.advantage-half-block-text {
    max-width: 437px;
}

.advantage-text-header {
    opacity: 0.5;
}

.advantages-block-with-background {
    background-image: url("../../../assets/images/Bridge.png");
}

